--- a/toutiao-m/src/styles/icon.less
+++ b/toutiao-m/src/styles/icon.less
@@ -1,8 +1,10 @@
 @font-face {
-  font-family: "icon";
-  /* Project id 2751827 */
-  src: url('//at.alicdn.com/t/font_2751827_3kn9rk9nuku.woff2?t=1629358085244') format('woff2'), url('//at.alicdn.com/t/font_2751827_3kn9rk9nuku.woff?t=1629358085244') format('woff'), url('//at.alicdn.com/t/font_2751827_3kn9rk9nuku.ttf?t=1629358085244') format('truetype');
+  font-family: "icon"; /* Project id 2751827 */
+  src: url('//at.alicdn.com/t/font_2751827_3kn9rk9nuku.woff2?t=1629358085244') format('woff2'),
+       url('//at.alicdn.com/t/font_2751827_3kn9rk9nuku.woff?t=1629358085244') format('woff'),
+       url('//at.alicdn.com/t/font_2751827_3kn9rk9nuku.ttf?t=1629358085244') format('truetype');
 }
+
 .icon {
   font-family: "icon" !important;
   font-size: 16px;
@@ -10,104 +12,83 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 .icon-gengduo:before {
   content: "\e601";
 }
+
 .icon-pinglun:before {
   content: "\e602";
 }
+
 .icon-fenxiang:before {
   content: "\e603";
 }
+
 .icon-guanbi:before {
   content: "\e604";
 }
+
 .icon-dianzan2:before {
   content: "\e605";
 }
+
 .icon-dianzan:before {
   content: "\e606";
 }
+
 .icon-shanchu:before {
   content: "\e607";
 }
+
 .icon-yanzhengma:before {
   content: "\e608";
 }
+
 .icon-lishi:before {
   content: "\e609";
 }
+
 .icon-wode:before {
   content: "\e60a";
 }
+
 .icon-sousuo:before {
   content: "\e60b";
 }
+
 .icon-shouji:before {
   content: "\e60c";
 }
+
 .icon-shoucang:before {
   content: "\e60d";
 }
+
 .icon-wenda:before {
   content: "\e60e";
 }
+
 .icon-shipin:before {
   content: "\e60f";
 }
+
 .icon-zuopin:before {
   content: "\e610";
 }
+
 .icon-youjiantou:before {
   content: "\e611";
 }
+
 .icon-shouye:before {
   content: "\e612";
 }
+
 .icon-yuedu:before {
   content: "\e613";
 }
+
 .icon-wuwangluo:before {
   content: "\e614";
-}
-* {
-  padding: 0;
-  margin: 0;
-}
-body,
-html {
-  margin: 0;
-  padding: 0;
-}
-body {
-  background-color: #f5f7f9;
-}
-li {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: normal;
-}
-.app-nav-bar {
-  background-color: #0E85FF;
-}
-.app-nav-bar .van-nav-bar__title {
-  color: #fff;
-}
-.app-nav-bar .van-nav-bar .van-icon {
-  color: #fff;
-}
-.app-nav-bar .van-nav-bar__text {
-  color: #fff;
-}
-.app-nav-bar .van-badge__wrapper {
-  color: #fff;
 }
