--- a/toutiao-m/src/styles/index.less
+++ b/toutiao-m/src/styles/index.less
@@ -1,8 +1,18 @@
 // 全局样式
+// 引入字体图标
+@import './icon.less';
+* {
+  padding: 0;
+  margin: 0;
+ 
+}
 body,
 html {
   margin: 0;
   padding: 0;
+}
+body {
+  background-color: #f5f7f9;
 }
 li {
   list-style: none;
@@ -12,4 +22,21 @@ a {
 }
 h1,h2,h3,h4,h5,h6 {
   font-weight: normal;
+}
+
+// 导航栏样式
+.app-nav-bar {
+  background-color: #0E85FF;
+  .van-nav-bar__title {
+    color: #fff;
+  }
+  .van-nav-bar .van-icon {
+    color: #fff ;
+  }
+  .van-nav-bar__text {
+    color: #fff;
+  }
+  .van-badge__wrapper {
+    color: #fff;
+  }
 }
